--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "NODE_ENV=production strapi build",
+    "build": "set NODE_ENV=production&&strapi build",
     "strapi": "strapi"
   },
   "devDependencies": {},
